Fix for screen resolutions. All pages should be clear and readable on all devices now. Removed quite a lot of absolute positioning, and decided to hide menus on smaller screens.

--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
-/* general */
+/* 
+* general 
+*/
 
 * {
   -webkit-box-sizing: border-box;
@@ -38,18 +40,8 @@ strong {
   margin-top: 100px;
 }
 
-#content {
-  margin-left: 80px;
-  width: 900px;
-  margin-bottom: 80px;
-}
-
 li code {
   color: #353535;
-}
-
-section section p {
-  width: 60%;
 }
 
 h2 {
@@ -59,13 +51,20 @@ h2 {
 
 h3 {
   background: url(images/hr.png) top center no-repeat;
-  margin-top: 40px;
   padding-top: 50px;
   padding-bottom: 5px;
   font-weight: bold;
 }
 
-/* links */
+#main {
+  width: 75%;
+  margin: 0 12.5% 0 12.5%;
+}
+
+
+/* 
+* links 
+*/
 
 a {
   color: #259dff;
@@ -85,13 +84,17 @@ nav a {
   color: #7B838A;
 }
 
-/* logo */
+
+/* 
+* logo 
+*/
+
+#content > section {
+  margin: 10% 0 10% 0;
+}
 
 #logo {
-  margin-top: 180px;
-  margin-bottom: 180px;
-  margin-left: 80px;
-  padding-left: 40px;
+  margin: auto;
   width: 440px;
   border-left: 1px dotted #eee;
   -webkit-font-smoothing: antialiased;
@@ -129,7 +132,10 @@ nav a {
   color: #858585;
 }
 
-/* secondary page logo */
+
+/* 
+* secondary page logo 
+*/
 
 .inner header {
   position: fixed;
@@ -167,7 +173,10 @@ nav a {
   display: none;
 }
 
-/* code */
+
+/* 
+* code 
+*/
 
 p code {
   background: #efefef;
@@ -202,7 +211,10 @@ code .string { color: #5890AD }
 code .keyword { color: #8A6343 }
 code .number { color: #2F6FAD }
 
-/* top button */
+
+/* 
+* top button 
+*/
 
 .scroll #top {
   opacity: .2;
@@ -231,13 +243,20 @@ code .number { color: #2F6FAD }
   height: 5px;
 }
 
-/* navigation */
+
+/* 
+* navigation
+*/
+
+header {
+  width: 100%;
+  height: 57px;
+}
 
 nav {
-  position: fixed;
-  top: 20px;
-  right: 15px;
-  z-index: 100;
+  margin-top: 15px;
+  margin-right: 15px;
+  float: right;
 }
 
 nav a {
@@ -255,7 +274,10 @@ nav a.active {
   color: #353535;
 }
 
-/* clearfix */
+
+/* 
+* clearfix 
+*/
 
 .clearfix:after {
   content: ".";
@@ -278,11 +300,15 @@ html[xmlns] .clearfix {
   height: 1%;
 }
 
-/* boxes */
+
+/* 
+* boxes 
+*/
 
 #boxes {
   background: url(images/hr.png) top center no-repeat;
-  margin-left: 50px;
+  width: 75%;
+  margin: 0 12.5% 0 12.5%;
   padding-top: 50px;
   padding-bottom: 50px;
   font-size: 12px;
@@ -293,11 +319,21 @@ html[xmlns] .clearfix {
 }
 
 #boxes section {
-  width: 180px;
+  width: 15%;
   margin: 0 25px;
   float: left;
   /* fix grid jank. #105 */
   min-height: 200px;
+}
+
+#boxes section:last-child {
+  width: 30%;
+}
+
+#boxes section:last-child p {
+  width: 50%;
+  display: inline-block;
+  margin-top: 0;
 }
 
 #boxes h3 {
@@ -312,7 +348,10 @@ html[xmlns] .clearfix {
   margin-bottom: 20px;
 }
 
-/* secondary menu */
+
+/* 
+* secondary menu 
+*/
 
 #menu {
   position: fixed;
@@ -351,7 +390,10 @@ html[xmlns] .clearfix {
   color: #259dff;
 }
 
-/* applications page */
+
+/* 
+* applications page 
+*/
 
 .application h2 {
   margin: 0;
@@ -371,6 +413,7 @@ html[xmlns] .clearfix {
 
 .application img {
   float: right;
+  width: 60%;
 }
 
 .application .link {
@@ -383,43 +426,12 @@ html[xmlns] .clearfix {
   margin-left: 4px;
 }
 
-/* ipad landscape */
 
-@media all and (max-width: 1200px) {
-  #content {
-    width: 760px;
-  }
+/* 
+* ipad landscape 
+*/
 
-  .applications #content,
-  .community #content {
-    width: 900px;
-  }
-}
-
-/* ipad portrait */
-
-@media all and (max-width: 768px) {
-  #content {
-    width: 500px;
-  }
-
-  .applications #content,
-  .community #content {
-    width: 600px;
-  }
-
-  .application img {
-    width: 60%;
-  }
-
-  .application {
-    height: 450px;
-  }
-
-  #boxes {
-    margin-left: 0;
-  }
-
+@media all and (max-width: 1200px) {    
   #boxes section {
     width: 100%;
     margin-top: 20px;
@@ -427,38 +439,107 @@ html[xmlns] .clearfix {
     /* undo grid jank */
     min-height: 0;
   }
+  
+  #boxes section:last-child {
+    width: 100%;
+  }
 }
 
-/* iphone portrait */
+
+/* 
+* ipad portrait 
+*/
+
+@media all and (max-width: 768px) {
+  .application img {
+    width: 60%;
+  }
+  
+  .inner header {
+    height: 85px;
+  }
+  
+  nav {
+    margin-top: 50px;
+    margin-left: 20px;
+    float: left;
+  }
+  
+  /* reference only the nav on the home page */
+  #content header nav:first-child {
+    float: right;
+  }
+  
+  #menu {
+    display: none;
+  }
+}
+
+
+/* 
+* iphone portrait 
+*/
 
 @media all and (max-width: 650px) {
-  #logo {
-    margin-left: 0;
+  body a > img {
+    display: none;
   }
-
-  #content {
-    width: 380px;
+  
+  nav {
+    margin: 15px 0 0 0;
+    width: 30%;
+    display: inline-block;
+    float: right;
   }
-
-  .applications #content,
-  .community #content {
-    width: 500px;
+  
+  nav a {
+    display: inherit;
+  }
+  
+  #content header {
+    height: 150px;
+  }
+  
+  .inner header {
+    position: static;
+  }
+  
+  .inner {
+    margin-top: 0;
+  }
+  
+  .inner.scroll header {
+    border-bottom: 0;
+    box-shadow: 0 0 0;
+  }
+  
+  .inner #logo {
+    padding-top: 60px;
+    display: inline-block;
+    position: static;
+  }
+  
+  #menu {
+    display: none;
   }
 
   section section p {
     width: 100%;
   }
 
-  .application {
-    height: 380px;
-  }
-
   .application img {
-    width: 60%;
+    width: 50%;
+  }
+  
+  .application .link {
+    left: 70%;
   }
 }
 
-/* tmp */
+
+/* 
+* tmp 
+*/
 
 #logos, footer {
   display: none;
@@ -469,8 +550,7 @@ html[xmlns] .clearfix {
 }
 
 #book img {
-  position: absolute;
-  top: 0;
-  right: -110px;
-  width: 50%;
+  display: inline-block;
+  width: 30%;
+  float: right;
 }
